trunk/Archive2/b2/8fa3fa702d5e9c/output
main.cpp:6:12: error: non-const lvalue reference to type 'promise<[...]>' cannot bind to a temporary of type 'promise<[...]>'
    p.swap(decltype(p)());
           ^~~~~~~~~~~~~
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/future:995:21: note: passing argument to parameter '__rhs' here
      swap(promise& __rhs) noexcept
                    ^
1 error generated.
